--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,21 @@
 spring:
   datasource:
-    url: jdbc:h2:file:./temp/data/h2;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=MYSQL
+    #url: jdbc:h2:file:./temp/data/h2;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=MYSQL
+
+
+    url: jdbc:h2:mem:test
     driverClassName: org.h2.Driver
+    schema: classpath:db/schema-h2.sql
     username: sa
     password: 123456
-  jpa:
-    show-sql: true
-    database-platform: org.hibernate.dialect.H2Dialect
-    hibernate:
-      ddl-auto: create
+    maximumPoolSize: 0
+
+#  jpa:
+#    show-sql: false
+#    database-platform: org.hibernate.dialect.H2Dialect
+#    hibernate:
+#      ddl-auto: create
+#      format_sql: false
   h2:
     console:
       enabled: true
@@ -16,3 +23,7 @@ spring:
       settings:
         web-allow-others: true
         web-admin-password: 123456
+mybatis-plus:
+  mapper-locations: classpath:mapper/*.xml
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
